examples/spork/failing/method_visibility_left_empty/Expected.java
class Cls {
<<<<<<< LEFT
    final static void method() {}
||||||| BASE
    public final static void method() {}
=======
    protected final static void method() {}
>>>>>>> RIGHT
}
